feat(ui): add floating action button for adding games and refine UI styles
- Replace sidebar add button with a fixed-position floating action button (FAB) for better UX
- Update error color variables and error banner styles for improved consistency
- Remove 'cloud' option from backup destination select, keeping only 'local' and 'both'
- Update upload to cloud logic to prevent uploads when backup destination is 'local'
- Enhance notifications bell with active state indicator
- Add i18n support for Google login title in profile card
- Update translation strings for back button, cloud badge, and add Google login text in en, es, pt
- Delete unused register-protocol.sh script

BREAKING CHANGE: Removed 'cloud' backup destination option, users must now choose 'local' or 'both

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -24,7 +24,7 @@
     "snapshots": "snapshots"
   },
   "gameDetail": {
-    "back": "Back to Games",
+    "back": "Back to home",
     "saveLocation": "Save Location",
     "executable": "Executable",
     "snapshots": "Snapshots",
@@ -186,7 +186,8 @@
     "signInPrompt": "Sign in with Google to enable cloud backup features.",
     "loadingStorage": "Loading storage info...",
     "used": "used",
-    "total": "total"
+    "total": "total",
+    "googleLogin": "Sign in with Google"
   },
   "notifications": {
     "title": "Notifications",
