--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -24,7 +24,7 @@
     "snapshots": "snapshots"
   },
   "gameDetail": {
-    "back": "Volver a juegos",
+    "back": "Volver al inicio",
     "saveLocation": "Ubicación de guardado",
     "executable": "Ejecutable",
     "snapshots": "Snapshots",
@@ -130,7 +130,7 @@
     "deleteFromCloud": "Eliminar de la nube",
     "uploadToCloud": "Subir a la nube",
     "backedUp": "Backup en la nube",
-    "badge": "nube",
+    "badge": "Nube",
     "uploadComplete": "Subida a la nube completada",
     "uploaded": "subido a la nube",
     "downloadSuccess": "Snapshot descargado de la nube correctamente",
@@ -186,7 +186,8 @@
     "signInPrompt": "Inicia sesión con Google para habilitar funciones de backup en la nube.",
     "loadingStorage": "Cargando información de almacenamiento...",
     "used": "usado",
-    "total": "total"
+    "total": "total",
+    "googleLogin": "Iniciar sesión con Google"
   },
   "notifications": {
     "title": "Notificaciones",
