feat(ui): add search and sort functionality to dashboard

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -17,7 +17,18 @@
       "description": "Add your first game to start creating snapshots of your save files. Never lose progress again.",
       "button": "Add Your First Game"
     },
-    "refresh": "Refresh"
+    "refresh": "Refresh",
+    "search": {
+      "placeholder": "Search games..."
+    },
+    "sort": {
+      "dateDesc": "Newest first",
+      "dateAsc": "Oldest first",
+      "nameAsc": "Name A-Z",
+      "nameDesc": "Name Z-A"
+    },
+    "noResults": "No games found",
+    "noResultsDesc": "Try adjusting your search terms"
   },
   "gameCard": {
     "added": "Added",
