feat(ui): add external links to settings page
Add clickable links to the project website and documentation in the settings about section, with custom styling for external links and improved scrollbar appearance. Updated translations for English, Spanish, and Portuguese.

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -84,7 +84,9 @@
     "saving": "Saving...",
     "about": "About",
     "version": "Checkpoint v0.1.0",
-    "description": "A simple save game backup tool for local games."
+    "description": "A simple save game backup tool for local games.",
+    "website": "Website",
+    "documentation": "Documentation"
   },
   "loading": {
     "creatingSnapshot": "Creating snapshot...",
