feat: add reset data functionality and update documentation
- Add reset_checkpoint command to clear all games, snapshots, and settings
- Update settings UI with danger zone for data reset
- Enhance error handling with notifications across components
- Update documentation for storage locations and snapshot format
- Bump version to 0.1.1 across package files and i18n
- Add release notes and GitHub templates

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -83,10 +83,22 @@
     "save": "Save Settings",
     "saving": "Saving...",
     "about": "About",
-    "version": "Checkpoint v0.1.0",
+    "version": "Checkpoint v0.1.1",
     "description": "A simple save game backup tool for local games.",
     "website": "Website",
-    "documentation": "Documentation"
+    "documentation": "Documentation",
+    "reportBug": "Report a Bug",
+    "snapshotsLocation": "Snapshots Location",
+    "snapshotsLocationDesc": "Your game backups are stored here:",
+    "snapshotsLocationHint": "This location cannot be changed to prevent cloud sync issues",
+    "dangerZone": "Danger Zone",
+    "dangerZoneDesc": "These actions cannot be undone. Be careful!",
+    "resetData": "Reset All Data",
+    "resetConfirmTitle": "Reset All Data?",
+    "resetConfirmMessage": "This will delete ALL your games, snapshots, and settings. This action cannot be undone. Are you sure?",
+    "resetConfirm": "Yes, Reset Everything",
+    "resetSuccess": "All data has been reset successfully",
+    "resetFailed": "Failed to reset data"
   },
   "loading": {
     "creatingSnapshot": "Creating snapshot...",
