--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -83,10 +83,22 @@
     "save": "Guardar ajustes",
     "saving": "Guardando...",
     "about": "Acerca de",
-    "version": "Checkpoint v0.1.0",
+    "version": "Checkpoint v0.1.1",
     "description": "Una herramienta simple de backup de partidas para juegos locales.",
     "website": "Sitio web",
-    "documentation": "Documentación"
+    "documentation": "Documentación",
+    "reportBug": "Reportar un Error",
+    "snapshotsLocation": "Ubicación de Backups",
+    "snapshotsLocationDesc": "Tus backups de juegos se almacenan aquí:",
+    "snapshotsLocationHint": "Esta ubicación no se puede cambiar para evitar problemas de sincronización",
+    "dangerZone": "Zona de Peligro",
+    "dangerZoneDesc": "Estas acciones no se pueden deshacer. ¡Ten cuidado!",
+    "resetData": "Restablecer Todos los Datos",
+    "resetConfirmTitle": "¿Restablecer Todos los Datos?",
+    "resetConfirmMessage": "Esto eliminará TODOS tus juegos, snapshots y configuraciones. Esta acción no se puede deshacer. ¿Estás seguro?",
+    "resetConfirm": "Sí, Restablecer Todo",
+    "resetSuccess": "Todos los datos han sido restablecidos exitosamente",
+    "resetFailed": "Error al restablecer los datos"
   },
   "loading": {
     "creatingSnapshot": "Creando snapshot...",
