--- a/src/i18n/pt.json
+++ b/src/i18n/pt.json
@@ -83,10 +83,22 @@
     "save": "Salvar configurações",
     "saving": "Salvando...",
     "about": "Sobre",
-    "version": "Checkpoint v0.1.0",
+    "version": "Checkpoint v0.1.1",
     "description": "Uma ferramenta simples de backup de saves para jogos locais.",
     "website": "Website",
-    "documentation": "Documentação"
+    "documentation": "Documentação",
+    "reportBug": "Reportar um Bug",
+    "snapshotsLocation": "Local dos Backups",
+    "snapshotsLocationDesc": "Seus backups de jogos são armazenados aqui:",
+    "snapshotsLocationHint": "Este local não pode ser alterado para evitar problemas de sincronização",
+    "dangerZone": "Zona de Perigo",
+    "dangerZoneDesc": "Estas ações não podem ser desfeitas. Tenha cuidado!",
+    "resetData": "Resetar Todos os Dados",
+    "resetConfirmTitle": "Resetar Todos os Dados?",
+    "resetConfirmMessage": "Isso excluirá TODOS os seus jogos, snapshots e configurações. Esta ação não pode ser desfeita. Tem certeza?",
+    "resetConfirm": "Sim, Resetar Tudo",
+    "resetSuccess": "Todos os dados foram resetados com sucesso",
+    "resetFailed": "Falha ao resetar dados"
   },
   "loading": {
     "creatingSnapshot": "Criando snapshot...",
