style(i18n): standardize capitalization

--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -87,16 +87,16 @@
     "description": "Una herramienta simple de backup de partidas para juegos locales.",
     "website": "Sitio web",
     "documentation": "Documentación",
-    "reportBug": "Reportar un Error",
-    "snapshotsLocation": "Ubicación de Backups",
+    "reportBug": "Reportar un error",
+    "snapshotsLocation": "Ubicación de backups",
     "snapshotsLocationDesc": "Tus backups de juegos se almacenan aquí:",
     "snapshotsLocationHint": "Esta ubicación no se puede cambiar para evitar problemas de sincronización",
-    "dangerZone": "Zona de Peligro",
+    "dangerZone": "Zona de peligro",
     "dangerZoneDesc": "Estas acciones no se pueden deshacer. ¡Ten cuidado!",
-    "resetData": "Restablecer Todos los Datos",
-    "resetConfirmTitle": "¿Restablecer Todos los Datos?",
+    "resetData": "Restablecer todos los datos",
+    "resetConfirmTitle": "¿Restablecer todos los datos?",
     "resetConfirmMessage": "Esto eliminará TODOS tus juegos, snapshots y configuraciones. Esta acción no se puede deshacer. ¿Estás seguro?",
-    "resetConfirm": "Sí, Restablecer Todo",
+    "resetConfirm": "Sí, restablecer todo",
     "resetSuccess": "Todos los datos han sido restablecidos exitosamente",
     "resetFailed": "Error al restablecer los datos"
   },
@@ -150,7 +150,7 @@
     "backupDestination": "Destino del backup",
     "localOnly": "Solo local",
     "cloudOnly": "Solo nube",
-    "both": "Local & nube",
+    "both": "Local y nube",
     "viewAll": "Ver todos",
     "howItWorks": "Cómo funciona el backup en la nube",
     "namingSaves": "Nombrando tus partidas",
