--- a/src/i18n/pt.json
+++ b/src/i18n/pt.json
@@ -87,16 +87,16 @@
     "description": "Uma ferramenta simples de backup de saves para jogos locais.",
     "website": "Website",
     "documentation": "Documentação",
-    "reportBug": "Reportar um Bug",
-    "snapshotsLocation": "Local dos Backups",
+    "reportBug": "Reportar um bug",
+    "snapshotsLocation": "Local dos backups",
     "snapshotsLocationDesc": "Seus backups de jogos são armazenados aqui:",
     "snapshotsLocationHint": "Este local não pode ser alterado para evitar problemas de sincronização",
-    "dangerZone": "Zona de Perigo",
+    "dangerZone": "Zona de perigo",
     "dangerZoneDesc": "Estas ações não podem ser desfeitas. Tenha cuidado!",
-    "resetData": "Resetar Todos os Dados",
-    "resetConfirmTitle": "Resetar Todos os Dados?",
+    "resetData": "Resetar Todos os dados",
+    "resetConfirmTitle": "Resetar todos os dados?",
     "resetConfirmMessage": "Isso excluirá TODOS os seus jogos, snapshots e configurações. Esta ação não pode ser desfeita. Tem certeza?",
-    "resetConfirm": "Sim, Resetar Tudo",
+    "resetConfirm": "Sim, resetar tudo",
     "resetSuccess": "Todos os dados foram resetados com sucesso",
     "resetFailed": "Falha ao resetar dados"
   },
@@ -150,7 +150,7 @@
     "backupDestination": "Destino do backup",
     "localOnly": "Apenas local",
     "cloudOnly": "Apenas nuvem",
-    "both": "Local & nuvem",
+    "both": "Local e nuvem",
     "viewAll": "Ver todos",
     "howItWorks": "Como funciona o backup na nuvem",
     "namingSaves": "Nomeando seus saves",
@@ -193,7 +193,7 @@
     "uploadTitle": "Enviar para nuvem",
     "uploadDesc": "Clique no ícone de nuvem ao lado de qualquer save para enviá-lo ao Google Drive. Seus saves são armazenados em uma pasta oculta do app, então não vão bagunçar seu Drive principal.",
     "downloadTitle": "Baixar da nuvem",
-    "downloadDesc": "Clique em \"Baixar da Nuvem\" para obter seu último save na nuvem. Isso cria uma nova cópia local que você pode restaurar.",
+    "downloadDesc": "Clique em \"Baixar da nuvem\" para obter seu último save na nuvem. Isso cria uma nova cópia local que você pode restaurar.",
     "namingDesc": "Saves na nuvem são armazenados globalmente entre todos os jogos, então use nomes descritivos que você reconhecerá depois:",
     "example1": "RDR2 - Capítulo 3 - 2026-02-11",
     "example2": "Elden Ring - Antes do Chefão",
